--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,14 +1,16 @@
 .footer {
-  min-height: 100px;
-  background: #E5E5E5;
+  min-height: 75px;
+  background: #000;
   position: relative;
 }
 
 .footer span {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   left: 0;
   right: 0;
-  padding: 3px;
-  background: #B8B8B8;
+  background: #000;
+  height: 40px;
+  text-align: center;
+  color: #ddd
 }
