--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,9 +13,46 @@ div[data-reactroot] {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-size:  16px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.8em;
 }
 
-.Login {
-  color: red;
+.section {
+  text-align: center;
+  padding: 50px 80px;
+}
+
+.section-dark {
+  background-color: #000;
+  color: #ddd;
+}
+
+.copy-body {
+  height: 400px;
+  padding-top: 110px;
+  font-size: 1.2em;
+}
+
+.ptext {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+  font-size: 27px;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.border {
+  background-color: #000;
+  color: #fff;
+  padding: 20px 80px;
+  margin: 10px;
 }
