--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   min-height: 75px;
-  background: #000;
+  background: yellowgreen;
   position: relative;
 }
 
@@ -9,8 +9,8 @@
   bottom: 10px;
   left: 0;
   right: 0;
-  background: #000;
+  background-color: yellowgreen !important;
   height: 40px;
   text-align: center;
-  color: #ddd
+  color: black;
 }
