--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,3 +1,10 @@
-nav.navbar.navbar-default {
+nav.navbar {
   margin-bottom: 0;
+  position: relative;
+  margin: 0;
+  border: 0;
+  min-height: 50px;
+  background-color: yellowgreen !important;
+  box-shadow: 0 2px 8px 0 rgba(50, 50, 50, 0.2);
+  transition: all 1s ease;
 }
