Recipe display changes

--- a/client/src/components/RecipeList/index.css
+++ b/client/src/components/RecipeList/index.css
@@ -1,4 +1,4 @@
-.RecipeList {
+/* .RecipeList {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -7,4 +7,4 @@
   .RecipeList {
     grid-template-columns: 1fr 1fr 1fr;
   }
-}
+} */
