--- a/client/src/components/RecipeCard/index.css
+++ b/client/src/components/RecipeCard/index.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-flow: column;
   min-height: 300px;
-  padding: 10px;
+  padding: 20px;
   background-size: cover !important;
 
   transition: all 0.3s;
@@ -18,6 +18,12 @@
     0 20px 125px -25px rgba(50, 50, 93, 0.5),
     -18px 20px 75px -37.5px rgba(0, 0, 0, 0.6);
   transform: translateY(-1px);
+}
+
+.titleRow {
+  align-content: center;
+  text-align: center;
+  margin: auto;
 }
 
 .RecipeCard__title {
@@ -31,8 +37,9 @@
 .RecipeCard__title a {
   color: inherit !important;
 }
-.RecipeCard svg {
+.RecipeCard_image {
   vertical-align: middle;
+  padding: 20px;
 }
 
 .RecipeCard__buttons {
@@ -58,4 +65,13 @@
   background-position: center;
   position: relative;
   background-color: lightgray;
+}
+
+.userInfoRow {
+  margin: 20px;
+  text-align: right;
+}
+
+.descriptionRow {
+  padding: 20px;
 }
